# movilidad-con-prompts

./: README.md  como_ir.js  paradas.json  paradas.py  pyproject.toml  server.py  test_radius.py  utils.py
como_ir/: __init__.py  utils.py
