[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "MCP server providing real-time and scheduled bus information for Montevideo, Uruguay's public transportation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
    "requests>=2.31.0",
]
